// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline Adlib pieces Current part with preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio95",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint91",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9033",
  },
]
`;

exports[`Timeline Adlib pieces Current part with preroll and adlib preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio101",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint97",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9033",
  },
]
`;

exports[`Timeline Basic pieces Current part with preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio4",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint0",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9033",
  },
]
`;

exports[`Timeline Basic pieces Current part with preroll and adlib preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio10",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint6",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9033",
  },
]
`;

exports[`Timeline Basic rundown 1`] = `
Array [
  Object {
    "_id": "mockStudio4",
    "generated": 12345,
    "timeline": Array [
      Object {
        "classes": Array [
          "rundown_active",
        ],
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "while": 1,
        },
        "id": "playlist_randomId9002_status",
        "layer": "rundown_status",
        "objectType": "rundown",
      },
      Object {
        "children": Array [],
        "content": Object {
          "deviceType": 0,
          "type": "group",
        },
        "enable": Object {
          "start": "now",
        },
        "id": "part_group_randomId9002_part0_0_randomId9008",
        "isGroup": true,
        "isPartGroup": true,
        "layer": "",
        "metaData": Object {
          "isPieceTimeline": true,
        },
        "objectType": "rundown",
        "priority": 5,
      },
      Object {
        "classes": Array [],
        "content": Object {
          "callBack": "partPlaybackStarted",
          "callBackData": Object {
            "partInstanceId": "randomId9002_part0_0_randomId9008",
            "rundownPlaylistId": "playlist_randomId9002",
          },
          "callBackStopped": "partPlaybackStopped",
          "deviceType": 0,
          "type": "callback",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "part_group_firstobject_randomId9002_part0_0_randomId9008",
        "inGroup": "part_group_randomId9002_part0_0_randomId9008",
        "layer": "group_first_object",
        "objectType": "rundown",
      },
      Object {
        "children": Array [],
        "content": Object {
          "deviceType": 0,
          "type": "group",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "piece_group_randomId9002_part0_0_randomId9008_randomId9002_piece001",
        "inGroup": "part_group_randomId9002_part0_0_randomId9008",
        "isGroup": true,
        "layer": "vt0",
        "metaData": Object {
          "isPieceTimeline": true,
          "pieceId": "randomId9002_part0_0_randomId9008_randomId9002_piece001",
        },
        "objectType": "rundown",
        "priority": 5,
      },
      Object {
        "classes": Array [
          "current_part",
        ],
        "content": Object {
          "callBack": "piecePlaybackStarted",
          "callBackData": Object {
            "dynamicallyInserted": false,
            "pieceInstanceId": "randomId9002_part0_0_randomId9008_randomId9002_piece001",
            "rundownPlaylistId": "playlist_randomId9002",
          },
          "callBackStopped": "piecePlaybackStopped",
          "deviceType": 0,
          "type": "callback",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "piece_group_firstobject_randomId9002_part0_0_randomId9008_randomId9002_piece001",
        "inGroup": "piece_group_randomId9002_part0_0_randomId9008_randomId9002_piece001",
        "layer": "vt0_firstobject",
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9017",
  },
]
`;

exports[`Timeline Basic rundown 2`] = `
Array [
  Object {
    "_id": "mockStudio4",
    "generated": 12345,
    "timeline": Array [
      Object {
        "classes": Array [
          "rundown_active",
        ],
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "while": 1,
        },
        "id": "playlist_randomId9002_status",
        "layer": "rundown_status",
        "objectType": "rundown",
      },
      Object {
        "children": Array [],
        "content": Object {
          "deviceType": 0,
          "type": "group",
        },
        "enable": Object {
          "setFromNow": true,
          "start": 100000,
        },
        "id": "part_group_randomId9002_part0_0_randomId9008",
        "isGroup": true,
        "isPartGroup": true,
        "layer": "",
        "metaData": Object {
          "isPieceTimeline": true,
        },
        "objectType": "rundown",
        "priority": 5,
      },
      Object {
        "classes": Array [],
        "content": Object {
          "callBack": "partPlaybackStarted",
          "callBackData": Object {
            "partInstanceId": "randomId9002_part0_0_randomId9008",
            "rundownPlaylistId": "playlist_randomId9002",
          },
          "callBackStopped": "partPlaybackStopped",
          "deviceType": 0,
          "type": "callback",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "part_group_firstobject_randomId9002_part0_0_randomId9008",
        "inGroup": "part_group_randomId9002_part0_0_randomId9008",
        "layer": "group_first_object",
        "objectType": "rundown",
      },
      Object {
        "children": Array [],
        "content": Object {
          "deviceType": 0,
          "type": "group",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "piece_group_randomId9002_part0_0_randomId9008_randomId9002_piece001",
        "inGroup": "part_group_randomId9002_part0_0_randomId9008",
        "isGroup": true,
        "layer": "vt0",
        "metaData": Object {
          "isPieceTimeline": true,
          "pieceId": "randomId9002_part0_0_randomId9008_randomId9002_piece001",
        },
        "objectType": "rundown",
        "priority": 5,
      },
      Object {
        "classes": Array [
          "current_part",
        ],
        "content": Object {
          "callBack": "piecePlaybackStarted",
          "callBackData": Object {
            "dynamicallyInserted": false,
            "pieceInstanceId": "randomId9002_part0_0_randomId9008_randomId9002_piece001",
            "rundownPlaylistId": "playlist_randomId9002",
          },
          "callBackStopped": "piecePlaybackStopped",
          "deviceType": 0,
          "type": "callback",
        },
        "enable": Object {
          "start": 0,
        },
        "id": "piece_group_firstobject_randomId9002_part0_0_randomId9008_randomId9002_piece001",
        "inGroup": "piece_group_randomId9002_part0_0_randomId9008_randomId9002_piece001",
        "layer": "vt0_firstobject",
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9020",
  },
]
`;

exports[`Timeline Basic rundown 3`] = `
Array [
  Object {
    "_id": "mockStudio4",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint0",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9025",
  },
]
`;

exports[`Timeline In transitions Basic inTransition 1`] = `
Array [
  Object {
    "_id": "mockStudio11",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint7",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions Basic inTransition with contentDelay + preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio35",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint31",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions Basic inTransition with contentDelay 1`] = `
Array [
  Object {
    "_id": "mockStudio29",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint25",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions Basic inTransition with planned pieces 1`] = `
Array [
  Object {
    "_id": "mockStudio17",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint13",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions Preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio23",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint19",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions inTransition disabled 1`] = `
Array [
  Object {
    "_id": "mockStudio59",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint55",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline In transitions inTransition is disabled during hold 1`] = `
Array [
  Object {
    "_id": "mockStudio53",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint49",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9024",
  },
]
`;

exports[`Timeline In transitions inTransition with existing infinites 1`] = `
Array [
  Object {
    "_id": "mockStudio41",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint37",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9022",
  },
]
`;

exports[`Timeline In transitions inTransition with new infinite 1`] = `
Array [
  Object {
    "_id": "mockStudio47",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint43",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9022",
  },
]
`;

exports[`Timeline Out transitions Basic outTransition 1`] = `
Array [
  Object {
    "_id": "mockStudio65",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint61",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline Out transitions outTransition + inTransition 1`] = `
Array [
  Object {
    "_id": "mockStudio83",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint79",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline Out transitions outTransition + preroll (2) 1`] = `
Array [
  Object {
    "_id": "mockStudio77",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint73",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline Out transitions outTransition + preroll 1`] = `
Array [
  Object {
    "_id": "mockStudio71",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint67",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9021",
  },
]
`;

exports[`Timeline Out transitions outTransition is disabled during hold 1`] = `
Array [
  Object {
    "_id": "mockStudio89",
    "generated": 12345,
    "timeline": Array [
      Object {
        "content": Object {
          "deviceType": 0,
        },
        "enable": Object {
          "start": 0,
        },
        "id": "baseline_version",
        "layer": "baseline_version",
        "metaData": Object {
          "versions": Object {
            "blueprintId": "mockBlueprint85",
            "blueprintVersion": "0.0.0",
            "core": "0.0.0-test",
            "studio": "asdf",
          },
        },
        "objectType": "rundown",
      },
    ],
    "timelineHash": "randomId9024",
  },
]
`;
